--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ h1 {
   transition: color 0.5s ease-in-out;
 }
 
-.active {
+.clicked {
   color: tomato;
 }
+
+.sexy-font {
+  font-family:'Courier New', Courier, monospace;
