--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,66 @@ body {
   outline: none;
 }
 
+#todo-bubble {
+  width: 320px;
+  height: 280px;
+  border-radius: 4px;
+  border-bottom-right-radius: 0px;
+  position: absolute;
+  bottom: 48px;
+  right: 24px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 16px;
+}
+#todo-bubble #today-span {
+  color: #2c2c2c;
+  font-size: 24px;
+  padding: 16px;
+}
+#todo-box {
+  width: 320px;
+  height: 220px;
+  overflow: auto;
+}
+#todo-box::-webkit-scrollbar {
+  background-color: white;
+  width: 18px;
+}
+#todo-box::-webkit-scrollbar-thumb {
+  background-color: #cccccc;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 4px solid transparent;
+}
+#todo-box #todo-list {
+  color: #2c2c2c;
+}
+#todo-box button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#todo-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  background: none;
+  color: white;
+  font-size: 16px;
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+}
+#todo-button:hover {
+  opacity: 1;
+}
+
 #quote {
   display: flex;
   flex-direction: column;
@@ -97,4 +157,8 @@ body {
 
 .hidden {
   display: none !important;
+}
+
+.opacity {
+  opacity: 0.6;
 }
